--- a/packages/apputils/style/iframe.css
+++ b/packages/apputils/style/iframe.css
@@ -18,11 +18,11 @@ Because iframes steal all cursor events, the following two rules are necessary
 to suppress pointer events while resize drags are occurring. There may be a
 better solution to this problem.
 */
-body.p-mod-override-cursor .jp-IFrame {
+body.lm-mod-override-cursor .jp-IFrame {
   position: relative;
 }
 
-body.p-mod-override-cursor .jp-IFrame:before {
+body.lm-mod-override-cursor .jp-IFrame:before {
   content: '';
   position: absolute;
   top: 0;
