--- a/packages/outputarea/style/base.css
+++ b/packages/outputarea/style/base.css
@@ -74,11 +74,11 @@ Because iframes steal all cursor events, the following two rules are necessary
 to suppress pointer events while resize drags are occurring. There may be a
 better solution to this problem.
 */
-body.p-mod-override-cursor .jp-OutputArea-output.jp-mod-isolated {
+body.lm-mod-override-cursor .jp-OutputArea-output.jp-mod-isolated {
   position: relative;
 }
 
-body.p-mod-override-cursor .jp-OutputArea-output.jp-mod-isolated:before {
+body.lm-mod-override-cursor .jp-OutputArea-output.jp-mod-isolated:before {
   content: '';
   position: absolute;
   top: 0;
