--- a/packages/application/style/dockpanel.css
+++ b/packages/application/style/dockpanel.css
@@ -11,14 +11,14 @@
 | DockPanel
 |----------------------------------------------------------------------------*/
 
-.p-DockPanel-widget {
+.lm-DockPanel-widget {
   background: var(--jp-layout-color0);
   border-left: var(--jp-border-width) solid var(--jp-border-color1);
   border-right: var(--jp-border-width) solid var(--jp-border-color1);
   border-bottom: var(--jp-border-width) solid var(--jp-border-color1);
 }
 
-.p-DockPanel-overlay {
+.lm-DockPanel-overlay {
   background: rgba(33, 150, 243, 0.1);
   border: var(--jp-border-width) dashed var(--jp-brand-color1);
   transition-property: top, left, right, bottom;
@@ -26,10 +26,10 @@
   transition-timing-function: ease;
 }
 
-.p-DockPanel-overlay.p-mod-root-top,
-.p-DockPanel-overlay.p-mod-root-left,
-.p-DockPanel-overlay.p-mod-root-right,
-.p-DockPanel-overlay.p-mod-root-bottom,
-.p-DockPanel-overlay.p-mod-root-center {
+.lm-DockPanel-overlay.lm-mod-root-top,
+.lm-DockPanel-overlay.lm-mod-root-left,
+.lm-DockPanel-overlay.lm-mod-root-right,
+.lm-DockPanel-overlay.lm-mod-root-bottom,
+.lm-DockPanel-overlay.lm-mod-root-center {
   border-width: 2px;
 }
