--- a/packages/filebrowser/style/base.css
+++ b/packages/filebrowser/style/base.css
@@ -245,8 +245,8 @@
   background-image: var(--jp-icon-image-selected);
 }
 
-.jp-DirListing-item.p-mod-drag-image,
-.jp-DirListing-item.jp-mod-selected.p-mod-drag-image {
+.jp-DirListing-item.lm-mod-drag-image,
+.jp-DirListing-item.jp-mod-selected.lm-mod-drag-image {
   font-size: var(--jp-ui-font-size1);
   padding-left: 4px;
   margin-left: 4px;
