--- a/packages/htmlviewer/style/base.css
+++ b/packages/htmlviewer/style/base.css
@@ -25,11 +25,11 @@ Because iframes steal all cursor events, the following two rules are necessary
 to suppress pointer events while resize drags are occuring. There may be a
 better solution to this problem.
 */
-body.p-mod-override-cursor .jp-HTMLViewer {
+body.lm-mod-override-cursor .jp-HTMLViewer {
   position: relative;
 }
 
-body.p-mod-override-cursor .jp-HTMLViewer:before {
+body.lm-mod-override-cursor .jp-HTMLViewer:before {
   content: '';
   position: absolute;
   top: 0;
