--- a/packages/pdf-extension/style/base.css
+++ b/packages/pdf-extension/style/base.css
@@ -21,11 +21,11 @@ When drag events occur, `p-mod-override-cursor` is added to the body.
 This reuses the same CSS selector logic as jp-IFrame to prevent embedded
 PDFs from swallowing cursor events.
 */
-body.p-mod-override-cursor .jp-PDFContainer {
+body.lm-mod-override-cursor .jp-PDFContainer {
   position: relative;
 }
 
-body.p-mod-override-cursor .jp-PDFContainer:before {
+body.lm-mod-override-cursor .jp-PDFContainer:before {
   content: '';
   position: absolute;
   z-index: 10;
