--- a/packages/logconsole-extension/style/base.css
+++ b/packages/logconsole-extension/style/base.css
@@ -34,6 +34,7 @@
 .jp-LogConsole .jp-ClearIcon {
   transform: rotate(90deg);
   margin-top: -1px;
+  padding: 0px 8px;
 }
 
 .jp-Toolbar-item.jp-LogConsole-toolbarLogLevel {
