--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -13,40 +13,36 @@
   height: 100%;
 }
 
-.jp-DebuggerSidebar > header {
+.jp-DebuggerSidebar header {
   border-bottom: solid var(--jp-border-width) var(--jp-border-color1);
   box-shadow: var(--jp-toolbar-box-shadow);
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: var(--jp-layout-color1);
-  min-height: 24px;
-}
-
-.jp-DebuggerSidebar-body > div > header {
-  border-bottom: solid var(--jp-border-width) var(--jp-border-color1);
-  border-top: solid var(--jp-border-width) var(--jp-border-color1);
-  box-shadow: var(--jp-toolbar-box-shadow);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background-color: var(--jp-layout-color2);
   min-height: 24px;
   height: 24px;
 }
 
-.jp-DebuggerSidebar-body > div.jp-DebuggerVariables > header {
-  border-top: none;
+.jp-DebuggerSidebar > header {
+  background-color: var(--jp-layout-color1);
 }
 
-.jp-DebuggerSidebar-body > div > header > h2,
-.jp-DebuggerSidebar > header > h2 {
+.jp-DebuggerSidebar header h2 {
   text-transform: uppercase;
   font-weight: 600;
   font-size: var(--jp-ui-font-size0);
   color: var(--jp-ui-font-color1);
   padding-left: 8px;
   padding-right: 4px;
+}
+
+.jp-DebuggerSidebar-body header {
+  border-top: solid var(--jp-border-width) var(--jp-border-color1);
+  background-color: var(--jp-layout-color2);
+}
+
+.jp-DebuggerSidebar-body .jp-DebuggerVariables header {
+  border-top: none;
 }
 
 .jp-DebuggerSidebar-body .jp-Toolbar {
