Fixed wrapSelect to support multiple selects
With the new LabIcon updates the wrapSelect changes set the caretdown icon
relative to the module body instead of the select. The inital values made
this work for the one use case in lab, but breaks all uses in extensions.

This pr makes the icon location relative to the select-wrapper div to fix this.

--- a/packages/apputils/style/styling.css
+++ b/packages/apputils/style/styling.css
@@ -42,6 +42,7 @@ input.jp-mod-styled:focus {
 
 .jp-select-wrapper {
   display: flex;
+  position: relative;
   flex-direction: column;
   padding: 1px;
   background-color: var(--jp-layout-color1);
