fixed launcher card icons for cmds with `iconClass` set

--- a/packages/ui-components/style/deprecatedExtra.css
+++ b/packages/ui-components/style/deprecatedExtra.css
@@ -10,3 +10,53 @@
 :root {
   --jp-icon-search-white: url('deprecated/search-white.svg');
 }
+
+/* .jp-Launcher-icon {
+  margin: 0px;
+  padding: 0px;
+  height: var(--jp-private-launcher-large-icon-size);
+  width: var(--jp-private-launcher-large-icon-size);
+  background-size: var(--jp-private-launcher-large-icon-size)
+    var(--jp-private-launcher-large-icon-size);
+  background-repeat: no-repeat;
+} */
+
+.jp-Icon .jp-MaterialIcon {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 16px;
+  min-width: 16px;
+  min-height: 16px;
+}
+
+.jp-Icon-cover {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.jp-DragIcon {
+  margin-right: 4px;
+}
+
+/**
+ * (DEPRECATED) Support for specific CSS icon sizes
+ */
+
+.jp-Icon-16 {
+  background-size: 16px;
+  min-width: 16px;
+  min-height: 16px;
+}
+
+.jp-Icon-18 {
+  background-size: 18px;
+  min-width: 18px;
+  min-height: 18px;
+}
+
+.jp-Icon-20 {
+  background-size: 20px;
+  min-width: 20px;
+  min-height: 20px;
+}
