--- a/packages/ui-components/style/base.css
+++ b/packages/ui-components/style/base.css
@@ -94,8 +94,14 @@ input::placeholder {
   color: var(--jp-ui-font-color3);
 }
 
-.jp-Icon {
-  color: var(--jp-layout-color4);
+.jp-BPIcon {
+  display: inline-block;
+  vertical-align: middle;
+  margin: auto;
+}
+
+/* Stop blueprint futzing with our icon fills */
+.bp3-icon > svg:not([fill]) {
 }
 
 .jp-InputGroupAction {
