--- a/packages/services/examples/typescript-browser-with-output/templates/index.html
+++ b/packages/services/examples/typescript-browser-with-output/templates/index.html
@@ -10,8 +10,8 @@
     <script id="jupyter-config-data" type="application/json">
       {{ page_config_full | tojson }}
     </script>
-  
+
     <script src="{{base_url | e}}static/example/bundle.js"></script>
-    <pre id='output'></pre>
+    <span id='outputarea'></span>
   </body>
 </html>
