--- a/packages/extensionmanager/style/base.css
+++ b/packages/extensionmanager/style/base.css
@@ -164,9 +164,12 @@
   display: inline;
 }
 
-.jp-extensionmanager-entry.jp-extensionmanager-entry-mod-blacklisted
-  .jp-extensionmanager-entry-blacklisted {
-  display: inline;
+.jp-extensionmanager-entry.jp-extensionmanager-entry-is-blacklisted {
+  background-color: var(--jp-error-color3);
+}
+
+.jp-extensionmanager-entry.jp-extensionmanager-entry-is-whitelisted {
+  background-color: var(--jp-success-color3);
 }
 
 /* Precedence order update/error/warning matters! */
