--- a/packages/ui-components/style/deprecated.css
+++ b/packages/ui-components/style/deprecated.css
@@ -13,6 +13,7 @@
 
 :root {
   --jp-icon-add: url('icons/toolbar/add.svg');
+  --jp-icon-blacklisted: url('icons/listing/blacklisted.svg');
   --jp-icon-bug: url('icons/toolbar/bug.svg');
   --jp-icon-build: url('icons/sidebar/build.svg');
   --jp-icon-caret-down-empty-thin: url('icons/arrow/caret-down-empty-thin.svg');
@@ -76,6 +77,7 @@
   --jp-icon-trusted: url('icons/statusbar/trusted.svg');
   --jp-icon-undo: url('icons/toolbar/undo.svg');
   --jp-icon-vega: url('icons/filetype/vega.svg');
+  --jp-icon-whitelisted: url('icons/listing/whitelisted.svg');
   --jp-icon-yaml: url('icons/filetype/yaml.svg');
 }
 
@@ -83,6 +85,9 @@
 
 .jp-AddIcon {
   background-image: var(--jp-icon-add);
+}
+.jp-BlacklistedIcon {
+  background-image: var(--jp-icon-blacklisted);
 }
 .jp-BugIcon {
   background-image: var(--jp-icon-bug);
@@ -272,6 +277,9 @@
 }
 .jp-VegaIcon {
   background-image: var(--jp-icon-vega);
+}
+.jp-WhitelistedIcon {
+  background-image: var(--jp-icon-whitelisted);
 }
 .jp-YamlIcon {
   background-image: var(--jp-icon-yaml);
